--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git Hub</title>
 </head>
 <body>
-    
+    <h1>Git hub</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <h1>This is my pc</h1>
 </body>
 </html>
