button tag dezine

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Hub</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Git hub</h1>
     <p>Lorem ipsum dolor sit amet.</p>
     <h1>This is my pc</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, voluptates quidem. Est porro impedit temporibus, possimus itaque harum doloribus ipsum officiis dicta blanditiis dolores quis, voluptatibus sint adipisci minus earum delectus iste beatae dolor provident nemo voluptate? Soluta debitis corrupti officia nobis repellendus labore rerum corporis doloribus quas voluptatibus culpa, repudiandae aspernatur, minima voluptatem similique dicta autem excepturi alias, pariatur dolorum qui nesciunt quasi. Ipsa nulla porro quisquam provident dolorum ducimus debitis eos odit corporis, maiores hic cum ea quaerat voluptate praesentium molestias! Corporis inventore officiis vitae aspernatur natus eius voluptates in, delectus maxime, dolor voluptatem tenetur minima ut accusantium.</p>
+
+    <button>Click Me</button>
 
 
 </body>
